--- a/impressum.html
+++ b/impressum.html
@@ -26,7 +26,7 @@ class="ie9"><![endif]--><!--[if (gt IE 9)|!(IE)]><!--><body><!--<![endif]-->
   <a href="index.html">startseite</a>
   
   Impressum</h2></div></div></div></div><div class="container slot-two-columns"><div class="row"><div class="col-xs-12 col-md-8">
-<a id="c8"></a><div class="content-text m-b-1"><div class="row"><div class="col-sm-12"><p class="bodytext"><strong></strong><br>  <br> Glockengasse 37, 50667 Köln<br> info@elektriker-meinert.de</p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Telefon:</strong> +49 9421/7305-0<br> <strong>Fax:</strong> +49 9421/7305-80<br> <strong>E-Mail:</strong> <a href="mailto:info@rohr-spezialfahrzeuge.com">info@elektriker-meinert.de</a></p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Geschäftsführer:</strong>  Johann Meinert
+<a id="c8"></a><div class="content-text m-b-1"><div class="row"><div class="col-sm-12"><p class="bodytext"><strong></strong><br>  <br> Altendorfer Str. 298, 45143 Essen<br> info@elektriker-zacharias.de</p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Telefon:</strong> +49 9421/7305-0<br> <strong>Fax:</strong> +49 9421/7305-80<br> <strong>E-Mail:</strong> <a href="mailto:info@rohr-spezialfahrzeuge.com">info@elektriker-zacharias.de</a></p><p class="bodytext">&nbsp;</p><p class="bodytext"><strong>Geschäftsführer:</strong>  Richard Zacharias
   
   
   
